# analyst_virtual_assistant

./: Dockerfile  Makefile  README.md  app.py  pyproject.toml  req.txt
.github/workflows/: ci-cd.yml
config/: openai_client.py  products_parameters.md
handlers/: audio_handlers.py  command_handlers.py  message_handlers.py
utils/: helpers.py  prompt.txt  prompt_final.txt
