[tool.poetry]
name = "analyst-virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Daniil Zhilin <d.zhilin2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.30.2"
python-telegram-bot = "^21.2"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
flake8 = "^7.0.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
